--- a/css/style.css
+++ b/css/style.css
@@ -76,19 +76,21 @@ figcaption {
 .wrapper {
   width: 960px;
   margin: 0 auto;
-  background: #cce;
+  background: #ccc;
 }
 
 .col-1 {
   float: left;
   width: 32%;
+  background: #ccc
 }
 
 .col-2 {
   float: left;
   width: 66%
+  background: #ccc
 }
 
 .col-3 {
-  
+  background: #ccc;
 }
