--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,12 @@ figcaption {
   color: red;
 }
 
+/*Style Media*/
+
+img, video, audio {
+  max-width: 100%;
+}
+
 /*Style some layout*/
 
 .wrapper {
