--- a/css/style.css
+++ b/css/style.css
@@ -88,13 +88,13 @@ img, video, audio {
 .col-1 {
   float: left;
   width: 32%;
-  background: #ccc
+  background: #ccc;
 }
 
 .col-2 {
   float: left;
-  width: 66%
-  background: #ccc
+  width: 66%;
+  background: #ccc;
 }
 
 .col-3 {
