--- a/css/style.css
+++ b/css/style.css
@@ -117,3 +117,10 @@ img, video, audio {
 .first {
   margin-left: 0%;
 }
+
+/*Style Sections*/
+
+section {
+  padding: 20px;
+  margin-bottom: 20px;
+}
