automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ img, video, audio {
 /*Style some layout*/
 
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
 }
 .wrapper {
   width: 960px;
