--- a/css/style.css
+++ b/css/style.css
@@ -84,10 +84,11 @@ img, video, audio {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
+
 .wrapper {
   width: 960px;
   margin: 0 auto;
-  background: #ccc;
+  background: #eee;
 }
 
 .col-1 {
