--- a/css/style.css
+++ b/css/style.css
@@ -130,3 +130,12 @@ section {
   padding: 20px;
   margin-bottom: 20px;
 }
+
+
+/*Social Sections*/
+#social {
+  position: fixed;
+  top: 200px;
+  right: 20px;
+  width: 40px;
+}
