--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,15 @@ section {
 
 
 /*Social Sections*/
+
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: #fff;
+  z-index: 1;
+}
 #social {
   position: fixed;
   top: 200px;
